fix activity_car_detail.xml errors.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">project1</string>
+    <string name="carDetailExample">Experience the perfect blend of iconic style, powerful performance, and modern innovation with the 2016 Ford Mustang V6 Coupe. This legendary American muscle car is designed to turn heads and ignite your passion for the road. Under the hood, the robust 3.7-liter V6 engine delivers a thrilling 300 horsepower, providing an exhilarating driving experience whether you\'re cruising down the highway or carving through winding roads.</string>
 </resources>
